--- a/index.html
+++ b/index.html
@@ -20,20 +20,7 @@
       <main>
         <div class="container">
           <!-- Container a sinistra -->
-          <div class="col-9 container-img-left">
-            <div class="imgs-left">
-              <img src="img/02.jpg" alt="img-01" />
-            </div>
-            <div class="text">
-              <h1>Svizzera</h1>
-              <p>
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quod
-                eaque dignissimos ex cum tempore nam tempora nesciunt cumque!
-                Magni sit quis quibusdam, sed quas laborum nisi odit doloremque
-                ipsa nostrum.
-              </p>
-            </div>
-          </div>
+          <div class="col-9 container-img-left"></div>
           <!-- Container a destra -->
           <div class="col-3 container-img-right">
             <i class="fas fa-chevron-circle-up fa-chevron-circle-up-custom"></i>
@@ -41,27 +28,11 @@
             <i
               class="fas fa-chevron-circle-up fa-chevron-circle-down-custom"
             ></i>
-
-            <div class="imgs-right">
-              <img src="img/01.jpg" alt="img-right-01" />
-              <div class="overlay"></div>
-            </div>
-            <div class="imgs-right">
-              <img src="img/02.jpg" alt="img-right-01" />
-            </div>
-            <div class="imgs-right">
-              <img src="img/03.jpg" alt="img-right-01" />
-            </div>
-            <div class="imgs-right">
-              <img src="img/04.jpg" alt="img-right-01" />
-            </div>
-            <div class="imgs-right">
-              <img src="img/05.jpg" alt="img-right-01" />
-            </div>
           </div>
         </div>
       </main>
       <footer></footer>
+      <script type="text/javascript" src="app.js"></script>
     </body>
   </body>
 </html>
